force-app/main/default/objects/Integration_Log__c/fields/Duration_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Duration_Formatted__c</fullName>
    <formula>LPAD(TEXT(FLOOR( Duration__c / (60 * 60 * 1000))),2,&quot;0&quot;) &amp; &quot;:&quot; &amp; LPAD(TEXT(FLOOR(MOD((Duration__c / (60 * 1000)),60))),2,&quot;0&quot;) &amp; &quot;:&quot; &amp; LPAD(TEXT(FLOOR(MOD(Duration__c / 1000,60))),2,&quot;0&quot;) &amp; &quot;.&quot; &amp; LPAD(TEXT(FLOOR(MOD(Duration__c,1000))),3,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>