force-app/main/default/objects/Integration_Log__c/fields/Flag_Duration__c.field-meta.xml
<CustomField>
    <fullName>Flag_Duration__c</fullName>
    <formula>if(Duration__c &lt;= 3000,IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(ROUND(Duration__c/1000,2)) &amp; &quot;s&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=45&amp;vp=20&amp;w=60&amp;h=60&amp;c=11&amp;bgt=unicolored&amp;bgc=38761d&quot;,&quot;Good&quot;,60,60),
			IF(Duration__c &lt;= 5000, IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(ROUND(Duration__c/1000,2)) &amp; &quot;s&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=45&amp;vp=20&amp;w=60&amp;h=60&amp;c=11&amp;bgt=unicolored&amp;bgc=f1c232&quot;,&quot;Fair&quot;,60,60),
						IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(ROUND(Duration__c/1000,2)) &amp; &quot;s&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=45&amp;vp=20&amp;w=60&amp;h=60&amp;c=11&amp;bgt=unicolored&amp;bgc=990000&quot;,&quot;Good&quot;,60,60)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Anything below 3secs is considered a good time</inlineHelpText>
    <label>Duration</label>
    <type>Text</type>
</CustomField>