force-app/main/default/objects/Integration_Log__c/fields/Flag_Method__c.field-meta.xml
<CustomField>
    <fullName>Flag_Method__c</fullName>
    <formula>IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(Method__c) &amp; &quot;&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=20&amp;vp=20&amp;c=11&amp;bgt=unicolored&amp;bgc=3d85c6&quot;,TEXT(Method__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Method</label>
    <type>Text</type>
</CustomField>