force-app/main/default/objects/Integration_Log__c/fields/Flag_Module__c.field-meta.xml
<CustomField>
    <fullName>Flag_Module__c</fullName>
    <formula>IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; Module_High_Level__c &amp; &quot;&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=20&amp;vp=20&amp;c=11&amp;bgt=unicolored&amp;bgc=3d85c6&quot;,Module_High_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module</label>
    <type>Text</type>
</CustomField>