force-app/main/default/objects/Integration_Log__c/fields/Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>Flag_Status__c</fullName>
    <formula>if( Successful__c, IMAGE(&quot;https://login.salesforce.com/logos/Standard/task/logo.svg&quot;, &quot;OK&quot;, 60,60),IMAGE(&quot;https://login.salesforce.com/logos/Custom/Flag_Red/logo.png&quot;, &quot;Error&quot;,60,60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>