force-app/main/default/objects/Integration_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
			</value>
			<value>
                <fullName>PATCH</fullName>
			</value>
			<value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
			</value>
			<value>
                <fullName>Platform Event</fullName>
                <label>>Platform Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>