force-app/main/default/objects/Integration_Log__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>