force-app/main/default/objects/Integration_Log__c/fields/Module_High_Level__c.field-meta.xml
<CustomField>
    <fullName>Module_High_Level__c</fullName>
    <formula>IF(CONTAINS(TEXT(Module__c),&quot;:&quot;), MID(TEXT(Module__c),0,FIND(&quot;:&quot;, TEXT(Module__c)) - 1), TEXT(Module__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module</label>
    <type>Text</type>
</CustomField>