force-app/main/default/objects/Integration_Log__c/fields/Origin_Data__c.field-meta.xml
<CustomField>
    <fullName>Origin_Data__c</fullName>
    <label>Origin Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>