force-app/main/default/objects/Integration_Log__c/fields/Parent_Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Integration Log</label>
    <referenceTo>Integration_Log__c</referenceTo>
    <relationshipLabel>Children Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>