force-app/main/default/objects/Integration_Log__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <label>Request Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>