force-app/main/default/objects/Integration_Log__c/fields/Retry_Number__c.field-meta.xml
<CustomField>
    <fullName>Retry_Number__c</fullName>
    <label>Retry #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>