force-app/main/default/objects/Integration_Log__c/fields/Successful__c.field-meta.xml
<CustomField>
    <fullName>Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successful</label>
    <type>Checkbox</type>
</CustomField>