force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Successful__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>