force-app/main/default/objects/Integration_Log__c/listViews/Todays_Logs.listView-meta.xml
<ListView>
    <fullName>Todays_Logs</fullName>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Successful__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Logs</label>
</ListView>